# mtt-lang

./: .gitattributes  .gitignore  CONTRIBUTING.md  HACKING.md  LICENSE  Makefile  README.md  dune-project  mtt.opam  play.mtt  power.mtt  query.elpi  sand.mtt  tmp.elpi
.github/workflows/: ci.yml  workflow.yml
bench/: Generator.ml  dune
compiler/: Cam.ml  Cam.mli  CamInterpreter.ml  CamInterpreter.mli  Compiler.ml  Compiler.mli  FromMal.ml  Mal.ml  Plugin.ml  dune
core/: Ast.ml  Env.ml  Evaluator.ml  Evaluator.mli  Id.ml  LambdaTypechecker.ml  LambdaTypechecker.mli  Lexer.ml  Location.ml  Location.mli  MttError.ml  Nat.ml  Nat.mli  Parser.mly  ParserErrors.messages  ParserInterface.ml  ParserInterface.mli  PrettyPrinter.ml  PrettyPrinter.mli  Typechecker.elpi  Typechecker.ml  Typechecker.mli  Typechecker2.ml  Typechecker2.mli  Util.ml  dune
core/elpi/: mtt-infer.elpi  mtt.elpi
doc/: dune
examples/: Church numerals.mtt  Church-numerals.mtt  apply.mtt  boxed-product-curried.mtt  boxed-product2.mtt  declarations.mtt  map-counterexample.mtt  prawitz-counterexample.mtt  recursion-factorial.mtt  recursion-power-box.mtt  recursion-power.mtt  recursion.mtt  test.mtt
man/: dune
repl/: README.md  Repl.ml  dune
src/: Ast.ml  Compiler.ml  Compiler.mli  Env.ml  Env.mli  Evaluator.ml  Evaluator.mli  Id.ml  Lexer.ml  Location.ml  Location.mli  Nat.ml  Nat.mli  Parser.mly  ParserErrors.messages  ParserInterface.ml  ParserInterface.mli  PrettyPrinter.ml  PrettyPrinter.mli  Typechecker.ml  Typechecker.mli  Util.ml  dune
test/bin.t/: run.t
test/compiler/: compiler.t
test/evaluator/: adt.t  modal-counterexamples.t  modal.t  stlc.t
test/parser/: dune  parser-errors.t  parser.t
test/pretty-printer/: dune  ppTest.ml  pretty-printer.ml
test/prettyprinter/: dune  prettyprinter.ml
test/typechecker/: README.md  adt-counterexamples.t  adt.t  apply.md  dune  modal-counterexamples.t  modal.t  prawitz-counterexample.md  stlc-counterexamples.t  stlc.t
util/: Util.ml  dune
web/: ace.ml  ace.mli  basedummy.sh  dune  index.html  mttweb.ml  script.js  style.css
web/ace/: ace.js  mode-mtt.js  theme-twilight.js
web/examples/: apply.mtt  boxed-id.mtt  boxed-product1.mtt  boxed-product2.mtt  eval-apply.mtt  eval.mtt  map-counterexample.mtt  omega-counterexample.mtt  prawitz-counterexample.mtt  pure-counterexample.mtt  quote.mtt
