(menhir
 (flags "--table" "--strict")
 (modules Parser))

;; Generate ParserErrors module (to make parsing messages more user-friendly)
;; The stub for ParserErrors.messages file is generated using the following command:
;; menhir --list-errors src/Parser.mly > src/ParserErrors.messages

(rule
 (targets ParserErrors.ml)
 (deps ParserErrors.messages Parser.mly)
 (action
  (with-stdout-to
   ParserErrors.ml
   (run %{bin:menhir} --compile-errors ParserErrors.messages Parser.mly))))

(library
 (name mtt)
 (modes byte native)
 (public_name mtt)
 (wrapped true)
 (libraries base stdio sexplib sedlex menhirLib pprint zarith)
 (preprocess
  (pps ppx_let ppx_compare ppx_sexp_conv ppx_string_interpolation sedlex.ppx))
 (synopsis "Modal Type Theory Library"))
