(executable
  (name mttweb)
  (libraries js_of_ocaml-lwt base cmdliner mtt pprint)
  (flags :standard -safe-string)
  (modes js)
  (preprocess
    (pps ppx_let js_of_ocaml-ppx ppx_sexp_conv ppx_string_interpolation))
  (modules_without_implementation ace_types))

(rule
  (targets mttweb.js)
  (action
    (run %{bin:js_of_ocaml}
         --source-map %{dep:mttweb.bc} -o %{targets} --pretty)))

(alias
  (name default)
  (deps mttweb.js index.html))
